--- a/templates/index.html
+++ b/templates/index.html
@@ -44,18 +44,14 @@
         <div class="section center-align">
           <i class="material-icons large">search</i><br/>
 
-          <h5 class="row">Discover awesome <b class="blue-text">ideas</b></h5>
+          <h5>Discover awesome <b class="blue-text">ideas</b></h5>
           <div class="row">
             <div class="col s12">
-
               <p class="">
-                Find out what we are struggling with
-                <br/>
-                Browse our list of challenges
-                <br/>
+                Find out what we are struggling with<br>
+                Browse our list of challenges<br>
                 Come up with even more awesome ideas
               </p>
-
             </div>
           </div>
 
@@ -71,7 +67,7 @@
           <div class="row">
             <div class="col s12">
               <p class="">
-                Check out our community</br>
+                Check out our community<br>
                 Explore our wide range of equipment
               </p>
             </div>
@@ -89,7 +85,7 @@
           <h5>Add <b class="green-text">success</b> to your portfolio</h5>
           <div class="row">
             <div class="col s12">
-              <p class="left-align">
+              <p class="">
                 Your k-space achievements will be visible to all future visitors
               </p>
             </div>
@@ -127,7 +123,7 @@
 
       <div class="container white-text">
         <div class="row">
-          <div class="col s1">Office 21m2</div>
+          <div class="col s1">Office 21m<sup>2</sup></div>
           <div class="col s1">&nbsp;</div>
           <div class="col s1">Lockers</div>
           <div class="col s1">&nbsp;</div>
@@ -137,7 +133,7 @@
           <div class="col s1">&nbsp;</div>
           <div class="col s1">Moar lockers</div>
           <div class="col s1">&nbsp;</div>
-          <div class="col s1">Office 20m2</div>
+          <div class="col s1">Office 20m<sup>2</sup></div>
           <div class="col s1">&nbsp;</div>
 
         </div>
