landing page challenges add

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
   <title>K-space</title>
   <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -12,144 +12,172 @@
 </head>
 
 <body>
-  <div id="container" class="grey lighten-4">
+<div id="container" class="grey lighten-4">
 
-    <div class="headerblock section">
+  <div class="headerblock section">
 
-      <div class="fadeimage" style="opacity:1;background-image:url('http://robot.itcollege.ee/assets/img/sumoesp-soldered.jpg')"></div>
-      <!-- <div class="fadeimage" style="background-image:url('https://owncloud.koodur.com/index.php/apps/gallery/preview.public/1092117?width=2600&height=2600&c=d21f5a223e7ae8c692c537e6a35ae37f&requesttoken=TGJTDncMBCtJEG40Djt9HSUBIykoWn4bNwQpP09YAx4%3D%3A85kCFd3z8QYaaAKggYmQi%2F0mtMcmz7iSGQBOmq84Z50%3D&token=j0HUdRNEaZ37wGE')"></div>
-      <div class="fadeimage" style="background-image:url('https://owncloud.koodur.com/index.php/apps/gallery/preview.public/1055905?width=2600&height=2600&c=a635e088958188e4490b17a91602366a&requesttoken=TGJTDncMBCtJEG40Djt9HSUBIykoWn4bNwQpP09YAx4%3D%3A85kCFd3z8QYaaAKggYmQi%2F0mtMcmz7iSGQBOmq84Z50%3D&token=j0HUdRNEaZ37wGE')"></div> -->
+    <div class="fadeimage"
+         style="opacity:1;background-image:url('http://robot.itcollege.ee/assets/img/sumoesp-soldered.jpg')"></div>
+    <!-- <div class="fadeimage" style="background-image:url('https://owncloud.koodur.com/index.php/apps/gallery/preview.public/1092117?width=2600&height=2600&c=d21f5a223e7ae8c692c537e6a35ae37f&requesttoken=TGJTDncMBCtJEG40Djt9HSUBIykoWn4bNwQpP09YAx4%3D%3A85kCFd3z8QYaaAKggYmQi%2F0mtMcmz7iSGQBOmq84Z50%3D&token=j0HUdRNEaZ37wGE')"></div>
+    <div class="fadeimage" style="background-image:url('https://owncloud.koodur.com/index.php/apps/gallery/preview.public/1055905?width=2600&height=2600&c=a635e088958188e4490b17a91602366a&requesttoken=TGJTDncMBCtJEG40Djt9HSUBIykoWn4bNwQpP09YAx4%3D%3A85kCFd3z8QYaaAKggYmQi%2F0mtMcmz7iSGQBOmq84Z50%3D&token=j0HUdRNEaZ37wGE')"></div> -->
 
-      <div class="header center-align z-depth-1 section">
-        <h1 class="">k-space.ee</h1>
-        <div class="slogan">
-          <h5 class="center-align">Community-driven space for bringing your tech ideas to life</h5>
-        </div>
-      </div>
-
-      <br/><br/><br/>
-
-      <!-- landing page custom -->
-
-      <div class="row container">
-
-      </div>
-
-    </div>
-
-    <!-- ideas solution success -->
-    <div class="row container section">
-
-      <div class="col s12 m4">
-        <div class="section center-align">
-          <i class="material-icons large">search</i><br/>
-
-          <h5>Discover awesome <b class="blue-text">ideas</b></h5>
-          <div class="row">
-            <div class="col s12">
-              <p class="">
-                Find out what we are struggling with<br>
-                Browse our list of challenges<br>
-                Come up with even more awesome ideas
-              </p>
-            </div>
-          </div>
-
-          <a href="/challenges" class="btn-large blue hide-on-med-and-up">to ideas</a>
-
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="section center-align">
-          <i class="material-icons large">lightbulb_outline</i><br/>
-          <h5>Find a <b class="amber-text">solution</b></h5>
-          <div class="row">
-            <div class="col s12">
-              <p class="">
-                Check out our community<br>
-                Explore our wide range of equipment
-              </p>
-            </div>
-          </div>
-
-          <a href="#" class="btn-large amber hide-on-med-and-up">equipment</a>
-
-        </div>
-      </div>
-
-      <div class="col s12 m4">
-        <div class="section center-align">
-          <i class="material-icons large">star_half</i><br/>
-
-          <h5>Add <b class="green-text">success</b> to your portfolio</h5>
-          <div class="row">
-            <div class="col s12">
-              <p class="">
-                Your k-space achievements will be visible to all future visitors
-              </p>
-            </div>
-          </div>
-          <a href="/halloffame" class="btn-large green  hide-on-med-and-up">to success</a>
-
-        </div>
+    <div class="header center-align z-depth-1 section">
+      <h1 class="">k-space.ee</h1>
+      <div class="slogan">
+        <h5 class="center-align">Community-driven space for bringing your tech ideas to life</h5>
       </div>
     </div>
 
-    <div class="row container center-align hide-on-small-only">
-      <div class="col s12 m4">
-        <a class="btn-large blue" href="/challenges">to ideas</a>
-      </div>
-      <div class="col s12 m4">
-        <a href="#" class="btn-large amber ">to equipment</a>
-      </div>
-      <div class="col s12 m4">
-        <a href="/halloffame" class="btn-large green ">to success</a>
-      </div>
+    <br/><br/><br/>
+
+    <!-- landing page custom -->
+
+    <div class="row container">
+
     </div>
 
-    <div class="section map z-depth-1">
+  </div>
 
-      <div class="container white-text">
-        <h2 class="">We have</h2>
-        <div class="row section">
-          <div class="col s12 m6">
-            <h5>More than <b>300m<sup>2</sup></b> of space</h5>
-            <p>It's like the whole floor</p>
-          </div>
-        </div>
-      </div>
-      <!-- SVG START -->
+  <!-- ideas solution success -->
+  <div class="row container section">
 
-      <div class="container white-text">
+    <div class="col s12 m4">
+      <div class="section center-align">
+        <i class="material-icons large">search</i><br/>
+
+        <h5>Discover awesome <b class="blue-text">ideas</b></h5>
         <div class="row">
-          <div class="col s1">Office 21m<sup>2</sup></div>
-          <div class="col s1">&nbsp;</div>
-          <div class="col s1">Lockers</div>
-          <div class="col s1">&nbsp;</div>
-          <div class="col s1">&nbsp;</div>
-          <div class="col s1">Office 15m<sup>2</sup></div>
-          <div class="col s1">&nbsp;</div>
-          <div class="col s1">&nbsp;</div>
-          <div class="col s1">Moar lockers</div>
-          <div class="col s1">&nbsp;</div>
-          <div class="col s1">Office 20m<sup>2</sup></div>
-          <div class="col s1">&nbsp;</div>
+          <div class="col s12">
+            <p class="">
+              Find out what we are struggling with<br>
+              Browse our list of challenges<br>
+              Come up with even more awesome ideas
+            </p>
+          </div>
+        </div>
 
+        <a href="/challenges" class="btn-large blue hide-on-med-and-up">to ideas</a>
+
+      </div>
+    </div>
+
+    <div class="col s12 m4">
+      <div class="section center-align">
+        <i class="material-icons large">lightbulb_outline</i><br/>
+        <h5>Find a <b class="amber-text">solution</b></h5>
+        <div class="row">
+          <div class="col s12">
+            <p class="">
+              Check out our community<br>
+              Explore our wide range of equipment
+            </p>
+          </div>
+        </div>
+
+        <a href="#" class="btn-large amber hide-on-med-and-up">equipment</a>
+
+      </div>
+    </div>
+
+    <div class="col s12 m4">
+      <div class="section center-align">
+        <i class="material-icons large">star_half</i><br/>
+
+        <h5>Add <b class="green-text">success</b> to your portfolio</h5>
+        <div class="row">
+          <div class="col s12">
+            <p class="">
+              Your k-space achievements will be visible to all future visitors
+            </p>
+          </div>
+        </div>
+        <a href="/halloffame" class="btn-large green  hide-on-med-and-up">to success</a>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="row container center-align hide-on-small-only">
+    <div class="col s12 m4">
+      <a class="btn-large blue" href="/challenges">to ideas</a>
+    </div>
+    <div class="col s12 m4">
+      <a href="#" class="btn-large amber ">to equipment</a>
+    </div>
+    <div class="col s12 m4">
+      <a href="/halloffame" class="btn-large green ">to success</a>
+    </div>
+  </div>
+
+  <div class="section map z-depth-1">
+
+    <div class="container white-text">
+      <h2 class="">We have</h2>
+      <div class="row section">
+        <div class="col s12 m6">
+          <h5>More than <b>300m<sup>2</sup></b> of space</h5>
+          <p>It's like the whole floor</p>
         </div>
       </div>
+    </div>
+    <!-- SVG START -->
 
-      <div class="container">
+    <div class="container white-text">
+      <div class="row">
+        <div class="col s1">Office 21m<sup>2</sup></div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1">Lockers</div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1">Office 15m<sup>2</sup></div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1">Moar lockers</div>
+        <div class="col s1">&nbsp;</div>
+        <div class="col s1">Office 20m<sup>2</sup></div>
+        <div class="col s1">&nbsp;</div>
 
-        <!-- SVG START -->
-        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+      </div>
+    </div>
+
+    <div class="container">
+
+      <!-- SVG START -->
+      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	         viewBox="0 0 802.7 239.1" style="enable-background:new 0 0 802.7 239.1;" xml:space="preserve">
         <style type="text/css">
-	        .st0{fill:#26719B;stroke:#34495E;stroke-width:5;stroke-miterlimit:10;}
-	        .st1{fill:#3498DB;stroke:#34495E;stroke-width:5;stroke-miterlimit:10;}
-	        .st2{fill:#ECF0F1;stroke:#ECF0F1;stroke-miterlimit:10;}
-	        .st3{fill:#ECF0F1;stroke:#ECF0F1;stroke-width:0.5;stroke-miterlimit:10;}
-	        .st4{fill:none;stroke:#ECF0F1;stroke-miterlimit:10;}
+	        .st0 {
+            fill: #26719B;
+            stroke: #34495E;
+            stroke-width: 5;
+            stroke-miterlimit: 10;
+          }
+
+          .st1 {
+            fill: #3498DB;
+            stroke: #34495E;
+            stroke-width: 5;
+            stroke-miterlimit: 10;
+          }
+
+          .st2 {
+            fill: #ECF0F1;
+            stroke: #ECF0F1;
+            stroke-miterlimit: 10;
+          }
+
+          .st3 {
+            fill: #ECF0F1;
+            stroke: #ECF0F1;
+            stroke-width: 0.5;
+            stroke-miterlimit: 10;
+          }
+
+          .st4 {
+            fill: none;
+            stroke: #ECF0F1;
+            stroke-miterlimit: 10;
+          }
         </style>
         <g id="bg">
         </g>
@@ -241,67 +269,130 @@
   </div>
 
 
-
-      <!-- SVG END -->
-
-    <div>
-
-      <div class="row section">
-        <div class="col s12 m6 offset-m2">
-          <h5><b>23.2</b> different tools</h5>
-          <p>Including CNC bench, 3D printer, servers, chainsaws, sledgehammers </p>
+  <!-- SVG END -->
+  <div class="container black-text">
+    <div class="row">
+      <div class="col s12 m6">
+        <h2 class="">Challenges</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12">
+            <span class="flow-text">
+                Do something new. Test yourself. Improve your portfolio. Have fun.
+            </span>
+        <p>
+          Take part in our many challenges, ranging from restoring corrupted files from a flash drive to taking down
+          walls with a sledgehammer. Once a challenge has been completed, the user will be added to our glorious hall of
+          fame, where friends and employers can awe at your achievements.
+        </p>
+      </div>
+    </div>
+    <div class="row challenges">
+      <div class="col s12 m3">
+        <div class="card small">
+          <div class="card-content">
+            <div class="card-title">name here</div>
+            <p>Description here</p>
+            </br>
+            <div>
+              <div class="chip">security</div>
+            </div>
+            </br>
+          </div>
         </div>
       </div>
-      <div class="row section">
-        <div class="col s12 m6 offset-m3">
-          <h5><b>29</b> people</h5>
-          <p>Maybe one or two more</p>
+      <div class="col s12 m3">
+        <div class="card small">
+          <div class="card-content">
+            <div class="card-title">name here</div>
+            <p>Description here</p>
+            </br>
+            <div>
+              <div class="chip">security</div>
+            </div>
+            </br>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m3">
+        <div class="card small">
+          <div class="card-content">
+            <div class="card-title">name here</div>
+            <p>Description here</p>
+            </br>
+            <div>
+              <div class="chip">security</div>
+            </div>
+            </br>
+          </div>
+        </div>
+      </div>
+      <div class="col s12 m3">
+        <div class="card small">
+          <div class="card-content">
+            <div class="card-title">name here</div>
+            <p>Description here</p>
+            <br>
+            <div>
+              <div class="chip">security</div>
+            </div>
+            <br>
+          </div>
         </div>
       </div>
     </div>
-
-    <br/>
-
-    <footer class="page-footer">
-        <div class="container">
-          <div class="row">
-            <div class="col l6 s12">
-              <h5 class="white-text">Contact</h5>
-              <p class="grey-text text-lighten-4">
-                <i class="material-icons">phone</i>&nbsp;Call Lauri 55 55 5555
-              </p>
-
-              <h5 class="white-text">Sponsors</h5>
-              <p class="grey-text text-lighten-4">
-                We have more than 10 companies supporting us financially and by equipment
-                </br>
-                <a href="#">I want to become a sponsor</a>
-              </p>
-
-            </div>
-            <div class="col l4 offset-l2 s12">
-              <h5 class="white-text">Links</h5>
-              <ul>
-                <li><a class="grey-text text-lighten-3" href="#!">Mission</a></li>
-                <li><a class="grey-text text-lighten-3" href="#!">People</a></li>
-              </ul>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1015.5421689053422!2d24.659768056865254!3d59.39830538168295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469295abf80677bd%3A0x89a6e8a5671f608b!2sAkadeemia+tee+21%2F1%2C+12618+Tallinn!5e0!3m2!1set!2see!4v1507405326247" width="350" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
-            </div>
-          </div>
-        </div>
-        <div class="footer-copyright">
-          <div class="container">
-          © 2017 k-space
-          <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
-          </div>
-        </div>
-      </footer>
-
+    <br>
+    <div class="row">
+      <div class="center-align">
+        <a href="challenges.html" class="btn-large blue">Browse all challenges</a>
+      </div>
+    </div>
   </div>
 
-  <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
-  <script src="/static/js/app.js"></script>
+  <br>
+
+  <footer class="page-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12">
+          <h5 class="white-text">Contact</h5>
+          <p class="grey-text text-lighten-4">
+            <i class="material-icons">phone</i>&nbsp;Call Lauri 55 55 5555
+          </p>
+
+          <h5 class="white-text">Sponsors</h5>
+          <p class="grey-text text-lighten-4">
+            We have more than 10 companies supporting us financially and by equipment
+            </br>
+            <a href="#">I want to become a sponsor</a>
+          </p>
+
+        </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">Links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="#!">Mission</a></li>
+            <li><a class="grey-text text-lighten-3" href="#!">People</a></li>
+          </ul>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1015.5421689053422!2d24.659768056865254!3d59.39830538168295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469295abf80677bd%3A0x89a6e8a5671f608b!2sAkadeemia+tee+21%2F1%2C+12618+Tallinn!5e0!3m2!1set!2see!4v1507405326247"
+                  width="350" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright">
+      <div class="container">
+        © 2017 k-space
+        <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
+      </div>
+    </div>
+  </footer>
+
+</div>
+
+<script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+<script src="/static/js/app.js"></script>
 </body>
 
 </html>
