ideas are now dreams

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
     <div class="header center-align z-depth-1 section">
       <h1 class="">k-space.ee</h1>
       <div class="slogan">
-        <h5 class="center-align">Community-driven space for bringing your tech ideas to life</h5>
+        <h5 class="center-align">Community-driven space for bringing your tech dreams to life</h5>
       </div>
     </div>
 
