Fixed front page challenges button

--- a/templates/index.html
+++ b/templates/index.html
@@ -311,7 +311,7 @@
     <br>
     <div class="row">
       <div class="center-align">
-        <a href="challenges.html" class="btn-large blue">Browse all challenges</a>
+        <a href="challenges" class="btn-large blue">Browse all challenges</a>
       </div>
     </div>
   </div>
