--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -31,28 +31,35 @@
     </div>
 
     <div class="row container challenges">
-
-      {% for challenge in challenges %}
-        <div class="col s12 m6">
-          <div class="card small">
-
-            <div class="card-content">
-              <div class="card-title">{{ challenge.name }}</div>
-              <p>{{ challenge.description }}</p>
-              </br>
-              <div>
-                {% for tag in challenge.tags.all %}
-                  <div class="chip">{{ tag.name }}</div>
-                {% endfor %}
-              </div>
-              </br>
-              <div class="center-align">
-                <a href="/challenge/{{ challenge.id }}" class="btn-large">I can do it</a>
+        <div class="row">
+          {% for challenge in challenges %}
+            <div class="col s12 m4">
+              <div class="card" style="height:300px;">
+                <div class="card-content">
+                    <div class="row" style="height:160px;">
+                        <div class="col s12 m12">
+                            <div class="card-title"><b>{{ challenge.name }}</b></div>
+                            <p style="text-align: justify; max-height: 100px; overflow: scroll;">{{ challenge.description }}</p>
+                            <div style="padding-top: 15px;">
+                                {% for tag in challenge.tags.all %}
+                                    <div class="chip">{{ tag.name }}</div>
+                                {% endfor %}
+                            </div>
+                        </div>
+                    </div>
+                    </br>
+                    <div class="row">
+                        <div class="col s12 m12">
+                          <div class="center-align">
+                            <a href="/challenge/{{ challenge.id }}" class="btn-large">I can do it</a>
+                          </div>
+                        </div>
+                    </div>
+                </div>
               </div>
             </div>
-          </div>
+          {% endfor %}
         </div>
-      {% endfor %}
     </div>
 
     <!-- dashboard custom -->
