--- a/templates/hall_of_fame.html
+++ b/templates/hall_of_fame.html
@@ -23,7 +23,7 @@
 
     <div class="row container">
       <div class="section slogan">
-        <h2 class="center-align" style="font-weight:bold">HALL OF FAME<br></h2>
+        <h2 class="center-align" style="font-weight:bold">Hall of Fame<br></h2>
       </div>
     </div>
 
