Better button colors

--- a/staticfiles/css/app.css
+++ b/staticfiles/css/app.css
@@ -24,11 +24,11 @@ footer, .map {
 }
 
 a:link {
-    color: black;
+    color: white;
 }
 
 a:visited {
-    color: black;
+    color: white;
 }
 
 a:hover {
