room plan text size increase + grammar corrections

--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@
     </div>
     <!-- SVG START -->
 
-    <div class="container white-text">
+    <div class="container white-text" id="svgtext">
       <div class="row">
         <div class="col s1">Office 21m<sup>2</sup></div>
         <div class="col s1">&nbsp;</div>
@@ -132,7 +132,7 @@
         <div class="col s1">Office 15m<sup>2</sup></div>
         <div class="col s1">&nbsp;</div>
         <div class="col s1">&nbsp;</div>
-        <div class="col s1">Moar lockers</div>
+        <div class="col s1">More lockers</div>
         <div class="col s1">&nbsp;</div>
         <div class="col s1">Office 20m<sup>2</sup></div>
         <div class="col s1">&nbsp;</div>
@@ -252,11 +252,11 @@
 
     </div>
 
-    <div class="container white-text">
+    <div class="container white-text" id="svgtext">
       <div class="row">
         <div class="col s1">Servers</div>
         <div class="col s2">3D printers, lasercutter, soldering</div>
-        <div class="col s2">CNC machine, saw, latche, mill</div>
+        <div class="col s2">CNC machine, saw, lathe, mill</div>
         <div class="col s2">Kitchen, toilet, sauna</div>
 
         <div class="col s1">&nbsp;</div>
