Fixed link hover

--- a/templates/index.html
+++ b/templates/index.html
@@ -331,15 +331,15 @@
           <p class="grey-text text-lighten-4">
             We have more than 10 companies supporting us financially and by equipment
             </br>
-            <a href="#">I want to become a sponsor</a>
+            <a class="highlight" href="#">I want to become a sponsor</a>
           </p>
 
         </div>
         <div class="col l4 offset-l2 s12">
           <h5 class="white-text">Links</h5>
           <ul>
-            <li><a class="grey-text text-lighten-3" href="#!">Mission</a></li>
-            <li><a class="grey-text text-lighten-3" href="#!">People</a></li>
+            <li><a class="highlight" href="#!">Mission</a></li>
+            <li><a class="highlight" href="#!">People</a></li>
           </ul>
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1015.5421689053422!2d24.659768056865254!3d59.39830538168295!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469295abf80677bd%3A0x89a6e8a5671f608b!2sAkadeemia+tee+21%2F1%2C+12618+Tallinn!5e0!3m2!1set!2see!4v1507405326247"
                   width="350" height="200" frameborder="0" style="border:0" allowfullscreen></iframe>
