--- a/templates/hall_of_fame.html
+++ b/templates/hall_of_fame.html
@@ -37,17 +37,17 @@
                 <div class="card-image">
                     <a href="/profile/{{ user.username }}"><img src='/media/{{ user.profile.icon }}'></a>
                 </div>
-                  <h5 class="card-title" style="padding-top: 10px;color:black;"><a href="/profile/{{ user.username }}"><b>{{ user.username }}</b></a></h5>
+                  <h5 class="card-title" style="padding-top: 10px;color:black;"><a class='namelink' href="/profile/{{ user.username }}"><b>{{ user.username }}</b></a></h5>
                   <div class="row">
-                      <div class="col s12 m1">
-                          <i class="material-icons" style="font-size: 20px; padding-right: 5px; color: black">flash_on</i>
-                      </div>
-                      <div class="col s12 m10">
-                          <div class="progress" style="background-color: #f1f1f1">
-                              <div class="determinate" style="width: 70%; background-color:#ffc107;"></div>
-                          </div>
-                      </div>
-                      </div>
+                    <div class="col s12 m1">
+                        <i class="material-icons" style="font-size: 20px; padding-right: 5px; color: black">flash_on</i>
+                    </div>
+                    <div class="col s12 m10">
+                        <div class="progress" style="background-color: #f1f1f1">
+                            <div class="determinate" style="width: 70%; background-color:#ffc107;"></div>
+                        </div>
+                    </div>
+                  </div>
 
                 <div class="row">
                     <div class="col s12 m1">
