front page space before buttons

--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <!-- ideas solution success -->
-  <div class="row container section">
+  <div class="row container section" style="padding-bottom: 0px; margin-bottom: 0px">
 
     <div class="col s12 m4">
       <div class="section center-align">
@@ -97,7 +97,7 @@
     </div>
   </div>
 
-  <div class="row container center-align hide-on-small-only">
+  <div class="row container center-align hide-on-small-only" style="margin-bottom: 30px;">
     <div class="col s12 m4">
       <a class="btn-large blue" href="/challenges">to ideas</a>
     </div>
